HTML refactor and UI modifications: - Scroll Bars have been attempted to be explicitly styled to avoid distinct browser styles - Button sizes have been reduced - Double border on main screens enforced - Modal now has footer section containing a disclaimer

--- a/src/app.css
+++ b/src/app.css
@@ -19,6 +19,21 @@ textarea {
   color: theme("colors.gray.800");
   border-radius: 10px !important;
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f2f2f2;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #bdbdbd;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #6e6e6e;
+}
 :root {
   line-height: 1.5;
   font-weight: 400;
